[package]
name = "token-forge"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
chrono = "0.4"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
subtle = "2.4"

[dev-dependencies]
tempfile = "3.8"
